--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,6 @@ services:
       # !! If you are not using any of these options, remove the 'environment:' tag entirely.
     volumes:
       # Change './actual-data' below to the path to the folder you want Actual to store its data in on your server.
-      # '/data' is the path Actual will look for its files in by default, so leave that as-is.
-      - ./actual-data:/data
+      # '/data' is the path Actual will look for its files in by default, so leave that as-is.      
+      - /mnt/container-data/actual-budget/data:./actual-data:/data
     restart: unless-stopped
