--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
       # i.e. http://localhost:5006. You can change the first number to change the port, if you want.
       - '5006:5006'
     environment:
-      # Uncomment any of the lines below to set configuration options.
-      # - ACTUAL_HTTPS_KEY=/data/selfhost.key
-      # - ACTUAL_HTTPS_CERT=/data/selfhost.crt
+      # Uncomment any of the lines below to set configuration options.      
+      - ACTUAL_HTTPS_KEY=/data/actualbudget-key.pem
+      - ACTUAL_HTTPS_CERT=/data/actualbudget.pem
       - ACTUAL_PORT=5006
       # - ACTUAL_UPLOAD_FILE_SYNC_SIZE_LIMIT_MB=20
       # - ACTUAL_UPLOAD_SYNC_ENCRYPTED_FILE_SYNC_SIZE_LIMIT_MB=50
@@ -18,5 +18,5 @@ services:
     volumes:
       # Change './actual-data' below to the path to the folder you want Actual to store its data in on your server.
       # '/data' is the path Actual will look for its files in by default, so leave that as-is.      
-      - /mnt/container-data/actual-budget/data:./actual-data:/data
+      - /mnt/container-data/actual-budget/data:/data
     restart: unless-stopped
