--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
     image: actual-development
     environment:
       # Uncomment any of the lines below to set configuration options.      
-      - ACTUAL_HTTPS_KEY=/data/actual.home-key.pem
-      - ACTUAL_HTTPS_CERT=/data/actual.home.pem
+      # - ACTUAL_HTTPS_KEY=/data/actual.home-key.pem
+      # - ACTUAL_HTTPS_CERT=/data/actual.home.pem
       - ACTUAL_PORT=5006
       # - ACTUAL_UPLOAD_FILE_SYNC_SIZE_LIMIT_MB=20
       # - ACTUAL_UPLOAD_SYNC_ENCRYPTED_FILE_SYNC_SIZE_LIMIT_MB=50
